--- a/public/control/css/chosen.css
+++ b/public/control/css/chosen.css
@@ -5,12 +5,12 @@
   width: 100%;
 }
 .chosen-container {
-  display: inline-block;
+  display:block;
   font-size: 14px;
   position: relative;
   vertical-align: middle;
-  margin-left:14px;
   margin-bottom:20px;
+  width:100%!important;
 }
 .chosen-container .chosen-drop {
   background: #ffffff;
@@ -39,6 +39,7 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
+
 .chosen-container .chosen-results li {
   display: none;
   line-height: 1.42857143;
@@ -391,6 +392,10 @@
   direction: rtl;
   padding: 4px 5px 4px 20px;
 }
+.mg2{
+  margin-left:2px;
+  margin-right:2px;
+}
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 144dpi) {
   .chosen-rtl .chosen-search input[type="text"],
   .chosen-container-single .chosen-single abbr,
@@ -404,3 +409,11 @@
     background-repeat: no-repeat !important;
   }
 }
+@media screen and (max-width: 1224px) {
+	.time-zone-panel{
+		margin-top:-50px;
+	}
+	#status5{
+		display:none;
+	}
+}	
