--- a/public/control/css/login.css
+++ b/public/control/css/login.css
@@ -10,7 +10,7 @@ body{
 	left: 49%;
 	top: 50%;
 	transform: translate(-50%, -50%); /* Yep! */
-	top:40vh!important;
+	top:40vh;
 	z-index: 99999;
 }
 .login{
@@ -24,10 +24,11 @@ body{
 .login-header{
 	text-align:center;
 	display:block;
+	top:20px;
 	margin-top:80px!important;
 }
 .login-header a{
-	font-size:100px; 
+	font-size:80px; 
 	color:#f6f6f6; 
 	text-decoration:none;
 }
@@ -108,14 +109,19 @@ input[type=text]:focus, input[type=password]:focus{
 	display:none;
 }
 
+@media screen and (max-width:500px){
+	.corner-indicator{
+		display:none;
+	}
+}
 /*Responsive fix, zbog ifrema nikako ne može biti responsive*/
-@media screen and (max-width:1610px){
+@media screen and (max-width:1630px){
 	#rc-imageselect, .g-recaptcha {
-		transform:scale(0.87);
-		-webkit-transform:scale(0.87);
+		transform:scale(0.88);
+		-webkit-transform:scale(0.88);
 		transform-origin:0 0;
 		-webkit-transform-origin:0 0;
-		margin-left:50px;
+		margin-left:37px;
 	}
 }	
 
@@ -123,10 +129,8 @@ input[type=text]:focus, input[type=password]:focus{
     body {
         overflow-y:scroll;
     }
-	.login-header a{
-		display:none;
-	}
 }
+
 .fade_in_logo {
     -webkit-animation: fadein 0.6s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 0.6s; /* Firefox < 16 */
