--- a/public/home/css/loader.css
+++ b/public/home/css/loader.css
@@ -7,10 +7,11 @@ body.loader{
 }
 /* Globalni dio */
 .global-wrap{
-	position:relative;
-	visibility: hidden;
+	visibility:hidden;
 	z-index:1;
+	width:100%!important;
 }
+
 /**Loader container **/
 .loader-container {
 	position: fixed;
@@ -29,7 +30,7 @@ body.loader{
 }
 
 .loader-logo{
-	font-size:15vh; 
+	font-size:16vh; 
 	color:#f6f6f6; 
 	margin-bottom:-30px; 
 	opacity:0;
@@ -82,7 +83,11 @@ body.loader{
 	margin:20px;
 	opacity:0; /*Fix za prikaz */
 }
-
+@media (max-width: 767px) {
+	.loader-logo{
+		font-size:145px!important; 
+	}
+}
 .fade_in_logo {
     -webkit-animation: fadein 0.6s; /* Safari, Chrome and Opera > 12.1 */
        -moz-animation: fadein 0.6s; /* Firefox < 16 */
