--- a/public/home/css/myicon.css
+++ b/public/home/css/myicon.css
@@ -21,6 +21,7 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	shape-rendering: auto;
 }
 
 .icon-data-safe:before {
