--- a/public/home/css/style-color.css
+++ b/public/home/css/style-color.css
@@ -212,6 +212,27 @@ section.highlight {
 	background-size: 2460px;
 	clear: both;
 }
+section.download{
+	background: #F0F0ED;
+	background-color: #e7e7e7;
+	background-position: center bottom;
+	border-bottom: 5px solid #ECECE8;
+	margin: 0px 0;
+	padding: 0px 0px 30px 0px;
+	top: 0px;
+}
+.btn-dwn{
+	color: #ffffff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-color: #565553;
+	border-color: #434648;
+}
+.btn-dwn:hover,
+.btn-dwn:active{
+	color: #ffffff!important;
+	background-color: #706D68;
+	border-color: #4C545A;
+}
 
 section.page-top h1 {
 	border-bottom-color: #0698CB;
